--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "time-grunt": "~1.3.0",
     "udsjs": "~1.1.54",
     "url-loader": "~0.5.7",
-    "webpack": "~1.13.1"
+    "webpack": "~1.13.1",
+    "localforage": "^1.5.5",
+    "lodash": "~4.15.0"
   },
   "repository": {
     "type": "git",
