--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "angular": "~1.5.6",
     "angular-gettext": "~2.2.1",
+    "angular-ui-bootstrap": "~1.3.3",
     "babel": "~6.5.2",
     "babel-core": "~6.9.1",
     "babel-loader": "~6.2.4",
@@ -23,6 +24,7 @@
     "jade": "~1.11.0",
     "jade-loader": "~0.8.0",
     "jshint-stylish": "~2.2.0",
+    "jsuri": "^1.3.1",
     "load-grunt-tasks": "~3.5.0",
     "ng-annotate-loader": "~0.1.0",
     "raw-loader": "~0.5.1",
